--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,17 +1,51 @@
 AllCops:
+  TargetRubyVersion: 2.7
+  DisplayCopNames: true
   Exclude:
-    - '.bundle/**/*'
-    - 'bin/**/*'
+    - bin/**/*
+    - vendor/**/*
 
-Documentation:
+Style/Documentation:
   Enabled: false
 
-Metrics/LineLength:
-  Max: 110
-
-Style/SymbolArray:
+Style/MethodCalledOnDoEndBlock:
   Enabled: true
 
-Metrics/AbcSize:
-  Exclude:
-    - 'test/**/*'
+Style/CollectionMethods:
+  Enabled: true
+
+Style/SymbolArray:
+  Description: 'Use %i or %I for arrays of symbols.'
+  Enabled: true
+
+Style/StringLiterals:
+  EnforcedStyle: double_quotes
+  ConsistentQuotesInMultiline: true
+
+Layout/LineLength:
+  Description: 'Limit lines to 120 characters.'
+  Max: 120
+
+Layout/ParameterAlignment:
+  EnforcedStyle: with_fixed_indentation
+  SupportedStyles:
+    - with_first_parameter
+    - with_fixed_indentation
+
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
+Style/StringMethods:
+  Enabled: true
+
+Style/HashEachMethods:
+  Enabled: true
+
+Style/HashTransformKeys:
+  Enabled: true
+
+Style/HashTransformValues:
+  Enabled: true
+
+Metrics/MethodLength:
+  Max: 15
